# scribe

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  install-hooks.sh  justfile
.claude/: settings.json
.claude/skills/scribe-design/: README.md  SKILL.md  colors_and_type.css
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  ci.yaml  cve-scan.yaml  dockerimage.yaml
backend/: .env.example  CLAUDE.md  Cargo.toml  bacon.toml
backend/src/: auth.rs  chapters.rs  config.rs  covers.rs  db.rs  error.rs  filenaming.rs  lib.rs  main.rs  oidc.rs  pipeline.rs  poller.rs  press.rs  profile.rs  quality.rs  queue.rs  reconcile.rs  reconvert.rs  routes.rs  shim.rs  sidecar.rs  state.rs  sync.rs  util.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: smoke.rs
frontend/: .gitignore  .pnp.cjs  CLAUDE.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: README.md  site.webmanifest
frontend/src/: Root.tsx  api.ts  main.tsx  mq.ts  routeTree.gen.ts  theme.ts  themes.ts
frontend/src/components/: AccountRow.tsx  BookCard.tsx  EmptyShelfBackground.tsx  HealthBanner.tsx  JobRow.tsx  LoginGate.tsx  Nav.tsx  Wordmark.tsx
frontend/src/hooks/: useJobSse.ts
frontend/src/routes/: __root.tsx  accounts.tsx  index.tsx  jobs.tsx  settings.tsx
press/: .env.example  CLAUDE.md  Cargo.toml
press/src/: auth.rs  config.rs  ffmpeg.rs  jobs.rs  main.rs  mp4patch.rs  routes.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs
shelf/: .env.example  Cargo.toml
shelf/src/: abs.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
shim/: .env.example  API.md  CLAUDE.md  pyproject.toml
shim/data/accounts/: 473a5180891d5854.json  c33d9bcc6605df77.json
shim/src/shim/: __main__.py  accounts.py  config.py  library.py  login.py  main.py  voucher.py
