[workspace]
resolver = "2"
members = [
    "backend",
    "press",
    "shared",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "tokio", "tracing"] }
axum-extra = { version = "0.12", features = ["cookie", "cookie-signed", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "cors", "set-header"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
hex = "0.4"
base64 = "0.22"
dotenvy = "0.15"
rand = "0.9"
