[package]
name = "scribe-press"
version.workspace = true
edition.workspace = true

[dependencies]
scribe-shared = { path = "../shared" }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
dotenvy = { workspace = true }
