[package]
name = "scribe-shelf"
version.workspace = true
edition.workspace = true

[dependencies]
scribe-shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
subtle = "2"
url = { workspace = true }
