[project]
name = "shim"
version = "0.1.0"
description = "Audible auth + library + voucher sidecar wrapping mkb79/audible"
requires-python = ">=3.10"
dependencies = [
  "audible>=0.10",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "cryptography>=48.0.0",
  "python-dotenv>=1.0",
]

[project.scripts]
shim = "shim.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shim"]
