[project]
name = "shim"
version = "0.1.0"
description = "Audible auth + library + voucher sidecar wrapping mkb79/audible"
requires-python = ">=3.10"
dependencies = [
  "audible>=0.10",
  "fastapi>=0.139.0",
  # Plain uvicorn (not [standard]): the loopback, low-QPS sidecar doesn't
  # need uvloop/httptools/websockets/watchfiles — dropping them cuts RSS +
  # image size on the 1 GB Pi. uvicorn falls back to asyncio + h11.
  "uvicorn>=0.50.0",
  "cryptography>=49.0.0",
  "python-dotenv>=1.2.2",
]

[project.scripts]
shim = "shim.__main__:main"

# Dev-only tooling, installed by `uv sync` (default groups) and pinned in
# uv.lock. ruff is declared here so the pre-commit hook + CI run it from the
# project env via `uv run ruff` — previously the hook called a ruff that was
# never installed, so it failed to spawn on every shim commit.
[dependency-groups]
dev = ["ruff>=0.15.21"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shim"]
